# sc2-replay-utils

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  cliff.toml  index.html  split_sprite.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/locale/: en.txt  pt-BR.txt
data/locale/en/: ui.txt  units.txt
data/locale/pt-BR/: ui.txt  units.txt
docs/: parser-performance.md  supply_block_strategies.md
examples/: firebat_vs_ai.SC2Replay  mais_recente.SC2Replay  old_republic_50.SC2Replay  replay1.SC2Replay  replay2.SC2Replay  replay3.SC2Replay  replay_ai.SC2Replay  replay_bktmaster.SC2Replay  replay_observed.SC2Replay  replay_ptr.SC2Replay  replay_sefi1.SC2Replay  replay_sefi2.SC2Replay  replay_sefi3.SC2Replay  serral.SC2Replay  winter_madness_69.SC2Replay
examples/golden/: old_republic_50_build_order_Terror.csv  old_republic_50_build_order_firebat.csv
src/: all_image.rs  army_production_by_battle.rs  army_value.rs  army_value_image.rs  balance_data.rs  build_order.rs  build_order_image.rs  build_times.rs  chat.rs  commands.rs  debug_addons.rs  icons.rs  lib.rs  loss_analysis.rs  main.rs  production_efficiency.rs  production_gap.rs  production_gap_image.rs  production_lanes.rs  profile.rs  replay.rs  supply_block.rs  supply_block_image.rs  utils.rs  worker_potential.rs  worker_production_chart.rs
src/build_order/: classify.rs  extract.rs  mod.rs  opening.rs  tests.rs  types.rs
src/build_order/opening/: facts.rs  mod.rs  protoss.rs  signature.rs  terran.rs  tests.rs  types.rs  zerg.rs
src/gui/: app.rs  build_times.rs  cache.rs  colors.rs  config.rs  library.rs  load_progress.rs  locale.rs  rename.rs  replay_state.rs  salt.rs  sidebar.rs  tokens.rs  ui_settings.rs  watcher.rs  widgets.rs
src/gui/app/: central.rs  library_detail.rs  menu_bar.rs  mod.rs  modals.rs  state.rs  status_bar.rs  topbar.rs
src/gui/tabs/: build_order.rs  charts.rs  chat.rs  mod.rs  timeline.rs
src/gui/tabs/charts/: army.rs  classify.rs  efficiency.rs  mod.rs  production.rs  summary.rs  worker_production.rs
src/gui/tabs/discoveries/: card.rs  mod.rs  worker_potential.rs
src/gui/tabs/insights/: army_prod_by_battle.rs  army_trades.rs  base_timings.rs  card.rs  chrono_distribution.rs  economy_gap.rs  grid.rs  inject_efficiency.rs  key_losses.rs  loss_analysis.rs  mod.rs  production_idle.rs  resources_unspent.rs  supply_block.rs  tech_timings.rs  turning_point.rs  util.rs  worker_potential.rs
src/gui/tabs/timeline/: entities.rs  minimap.rs  mod.rs  overlays.rs  side_panel.rs  transport.rs  unit_column.rs
src/map_image/: decode.rs  locator.rs  map_info.rs  mod.rs  objects.rs
src/production_efficiency/: mod.rs  models.rs  sweep.rs  tests.rs  types.rs
src/production_efficiency/tests/: army.rs  mod.rs  warpgate.rs  workers.rs  zerg.rs
src/production_lanes/: classify.rs  mod.rs  morph.rs  player.rs  resolve.rs  terran.rs  tests.rs  types.rs
src/replay/: classify.rs  finalize.rs  game.rs  message.rs  mod.rs  parse.rs  query.rs  tests.rs  tracker.rs  types.rs
src/replay/tests/: derived_indexes.rs  events.rs  mod.rs  observer.rs  parse.rs  positions.rs  query.rs  resources.rs
src/supply_block/: detector.rs  events.rs  mod.rs  tests.rs  types.rs
